[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperliquidwallettracker"
version = "1.0.0"
description = "Advanced real-time cryptocurrency wallet monitoring system for Hyperliquid protocol"
readme = "README.md"
authors = [
  { name = "JDENNO91", email = "jdenno91@example.com" }
]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "websockets>=12.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.0",
  "aiohttp>=3.9.0",
  "pydantic>=2.5.0",
  "structlog>=23.2.0",
  "prometheus-client>=0.19.0",
  "redis>=5.0.0",
  "aioredis>=2.0.1",
]

[tool.setuptools]
packages = ["hyperliquidwallettracker"]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "pre-commit>=3.6.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.7.0",
  "ruff>=0.1.0",
]



[project.urls]
Homepage = "https://github.com/JDENNO91/hyperliquidwallettracker"
Issues = "https://github.com/JDENNO91/hyperliquidwallettracker/issues"
Repository = "https://github.com/JDENNO91/hyperliquidwallettracker"
Documentation = "https://github.com/JDENNO91/hyperliquidwallettracker#readme"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "websockets.*",
    "aiohttp.*",
    "structlog.*",
    "prometheus_client.*",
    "redis.*",
    "aioredis.*",
    "click.*",
    "rich.*",
    "aiosmtplib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=hyperliquidwallettracker",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
    "network: Tests that require network access",
    "redis: Tests that require Redis",
    "websocket: Tests that require WebSocket connections",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:aiohttp.*",
]
asyncio_mode = "auto"
minversion = "7.0"

[tool.coverage.run]
source = ["hyperliquidwallettracker"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
